--- a/index.html
+++ b/index.html
@@ -4,32 +4,109 @@
 <head>
   <meta charset="utf-8">
   <meta description="This site contains information on the most brilliant coder">
-  <title>☭ Pieter's Site</title>
+  <title>☭ Pieter's Site ☭</title>
 </head>
 
 <body>
-  <img src="download.jpg" alt="No Image">
-  <h1>Pieter Brand</h1>
-  <p><em>Intern Outsystems developer at iSixty Services</em></p>
-  <p> Date of Birth: 1998-10-01 <br>
-    Place of Birth: Kimberley<br>
-    <hr>
-  <h3>Education ☭</h3>
+  <table cellspacing="20">
+    <tr>
+      <td><img src="download.jpg" alt="No Image"></td>
+      <td>
+        <h1>Pieter Brand</h1>
+        <p><em>Intern Outsystems developer at <a href="https://i60.co/" target="_blank">iSixty Services</a></em></p>
+        <p> Date of Birth:<a href="https://www.everything-birthday.com/date/october-1-1998" target="_blank"> 1998-10-01</a><br>
+          Place of Birth: <a href="https://en.wikipedia.org/wiki/Kimberley,_Northern_Cape" target="_blank">Kimberley</a><br>
+      </td>
+    </tr>
+  </table>
+
+  <hr>
+
+  <h3>☭ Education ☭</h3>
   <ul>
-    <li>Primary School: Eureka Primary School</li>
-    <li>Secondary School: Diamantveld Highschool</li>
-    <li>University: North West Univerity (Potchefstroom)</li>
+    <li>Primary School:<a href="https://www.eurekalaerskool.co.za/" target="_blank"> Eureka Primary School</a></li>
+    <li>Secondary School:<a href="http://www.diamantveld.co.za/" target="_blank"> Diamantveld Highschool</a></li>
+    <li>University:<a href="http://natural-sciences.nwu.ac.za/computer-sciences-and-information-systems"> North West Univerity (Potchefstroom)</a></li>
   </ul>
-  <h3>Hobbies ☭</h3>
-  <ol type="I">
-    <li>Aquascape</li>
-    <li>Gaming</li>
-    <ol type="i">
-      <li>Skyrim</li>
-    </ol>
-    <li>Coding</li>
-    <li>Sleep</li>
-  </ol>
+  <hr>
+  <h3><a href="hobbies.html" target="_blank">☭ Hobbies ☭</a></h3>
+  <h3><a href="Contact.html" target="_blank">☭ Contact Details ☭</a></h3>
+
+  <hr>
+
+  <h3>☭ Experience ☭</h3>
+  <table border="1">
+    <thead>
+      <tr>
+        <th>Dates</th>
+        <th>Work</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2020 - 2021</td>
+        <td>Intern Developer</td>
+      </tr>
+      <tr>
+        <td>2021</td>
+        <td>Courses</td>
+      </tr>
+    </tbody>
+    <tfoot>
+    </tfoot>
+  </table>
+
+  <hr>
+
+  <h3>Skills</h3>
+
+  <table>
+    <tr>
+      <td>
+        <table cellspacing-left="10">
+          <tr>
+            <td>Java</td>
+            <td>⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>C#</td>
+            <td>⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>CSS</td>
+            <td>⭐⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>JavaScript</td>
+            <td>⭐⭐</td>
+          </tr>
+        </table>
+      </td>
+      <td>
+        <table cellspacing-left="10">
+          <tr>
+            <td>HTML</td>
+            <td>⭐⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>SQL</td>
+            <td>⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>Git</td>
+            <td>⭐⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>React</td>
+            <td>⭐⭐</td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
+
+  <hr>
+
 </body>
 
 </html>
