--- a/index.html
+++ b/index.html
@@ -5,6 +5,37 @@
   <meta charset="utf-8">
   <meta description="This site contains information on the most brilliant coder">
   <title>☭ Pieter's Site ☭</title>
+
+  <style>
+    body {
+      background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+      background-size: 400% 400%;
+      animation: gradient 15s ease infinite;
+    }
+    @keyframes gradient {
+      0% {
+        background-position: 0% 50%;
+      }
+
+      50% {
+        background-position: 100% 50%;
+      }
+
+      100% {
+        background-position: 0% 50%;
+      }
+    }
+
+    hr{
+      background-color: transparent;
+      border-style: none;
+      border-top-style: dotted;
+      border-width: 10px;
+      border-color: grey;
+      width: 20%;
+    }
+  </style>
+
 </head>
 
 <body>
