--- a/Contact.html
+++ b/Contact.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+<link rel="stylesheet" href="css/styles.css">
 
 <head>
   <meta charset="utf-8">
   <title>Contact</title>
 </head>
 
-<body>
+
+
+<div>
   <h1>Contact Details</h1>
   <p>Address: Neverland</p>
   <p>Email: pbrand61@gmail.com</p>
-
   <form class="" action="mailto:pbrand61@gmail.com" method="post" enctype="text/plain">
     <label>Your name:</label>
     <input type="text" name="userName" value="">
@@ -22,6 +24,8 @@
     <br>
     <input type="submit">
   </form>
+</div>
+
 </body>
 
 </html>
