--- a/hobbies.html
+++ b/hobbies.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+<link rel="stylesheet" href="css/styles.css">
 
 <head>
   <meta charset="utf-8">
   <title>My Hobbies</title>
-</head> 
+</head>
 
-<body>
-  <h1>My Hobbies ☭</h1>
-  <ol type="I">
-    <li>Aquascape</li>
-    <li>Gaming</li>
-    <li>Coding</li>
-    <li>Sleep</li>
-  </ol>
+
+
+<body style="height-max">
+  <div>
+    <h1>My Hobbies ☭</h1>
+    <ol type="I">
+      <li>Aquascape</li>
+      <li>Gaming</li>
+      <li>Coding</li>
+      <li>Sleep</li>
+    </ol>
+  </div>
+
 </body>
 
 </html>
