--- a/index.html
+++ b/index.html
@@ -5,40 +5,11 @@
   <meta charset="utf-8">
   <meta description="This site contains information on the most brilliant coder">
   <title>☭ Pieter's Site ☭</title>
-
-  <style>
-    body {
-      background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-      background-size: 400% 400%;
-      animation: gradient 15s ease infinite;
-    }
-    @keyframes gradient {
-      0% {
-        background-position: 0% 50%;
-      }
-
-      50% {
-        background-position: 100% 50%;
-      }
-
-      100% {
-        background-position: 0% 50%;
-      }
-    }
-
-    hr{
-      background-color: transparent;
-      border-style: none;
-      border-top-style: dotted;
-      border-width: 10px;
-      border-color: grey;
-      width: 20%;
-    }
-  </style>
-
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
+  <div>
   <table cellspacing="20">
     <tr>
       <td><img src="download.jpg" alt="No Image"></td>
@@ -59,9 +30,12 @@
     <li>Secondary School:<a href="http://www.diamantveld.co.za/" target="_blank"> Diamantveld Highschool</a></li>
     <li>University:<a href="http://natural-sciences.nwu.ac.za/computer-sciences-and-information-systems"> North West Univerity (Potchefstroom)</a></li>
   </ul>
+
   <hr>
   <h3><a href="hobbies.html" target="_blank">☭ Hobbies ☭</a></h3>
   <h3><a href="Contact.html" target="_blank">☭ Contact Details ☭</a></h3>
+
+
 
   <hr>
 
@@ -137,7 +111,7 @@
   </table>
 
   <hr>
-
+</div>
 </body>
 
 </html>
